# fedml_sample

./: .gitignore  404.html  Makefile  README.md  aaa.py  export_open_api.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: fedml.yml
ansible/: .gitignore  Makefile  README.md  ansible.cfg  playbook.yml  uninstall-conda.yml
ansible/playbooks/: delivery.yml  install.yml
ansible/scripts/: clone_fedml.sh  common.sh  debug_fedavg.sh  install_common.sh  install_fedml.sh  install_official.sh  ready_fedavg.sh  remove_logs.sh  run_fedavg.sh  uninstall_conda.sh
background/: index.html
code_reading/: index.html
docs/: code_reading.md  glossary.md  index.md  installation.md  research.md
docs/openapi/: openapi.json
fedml_sample/: cli.py  main.py  trainer.py
fedml_sample_old/: cli.py
fedrouter/: main.py
flower_sample/: client.py  pyproject.toml
flower_sample/docs/: README.md
glossary/: index.html
installation/: index.html
interface/: __main__.py  algorithms.py  main.py  models.py  trainer.py
my_fl/: __init__.py  app.py  params.py  server_config.py  server_factories.py  utils.py
my_fl/cli/: __init__.py
my_fl/clients/: __init__.py
my_fl/core/: communicators.py  directory.py  federators.py  manager.py  params.py  trainer.py
my_fl/loader/: __init__.py
my_fl/servers/: (未使用っぽい)domain.py  domain.py
my_fl/workers.py/: domain.py
openapi/: openapi.json
print_page/: index.html
research/: index.html
search/: search_index.json
tech_selection/: index.html
tech_stack/: index.html
tests/: test_train.py
